--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@svelteuidev/composables": "^0.15.3",
-		"@svelteuidev/core": "^0.15.3"
+		"@svelteuidev/core": "^0.15.3",
+		"radix-icons-svelte": "^1.2.1",
+		"svelte-preprocess": "^5.1.1"
 	}
 }
