--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   },
   "type": "module",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/adapter-static": "^2.0.3",
     "@svelteuidev/composables": "^0.15.3",
     "@svelteuidev/core": "^0.15.3",
+    "@svelteuidev/motion": "^0.15.4",
     "radix-icons-svelte": "^1.2.1",
+    "svelte-fa": "^3.0.4",
     "svelte-preprocess": "^5.1.1"
   }
 }
